public/styles/style.css
/*set to zero*/
body{
  padding: 0;
  margin: 0;
}

h1 {
  margin-top: 0%;
  padding-top: .4444444444rem;
padding-bottom: .4444444444rem;
line-height: 1.125;
font-size: 3.1666666667rem;
font-weight: 600;
font-family: helvetica;
display: block;
text-align: center;
background-color: #eeb111;

}

#left img {
    align-items: left;
    background-size: cover;
    justify-content: left;
    float: left;
    padding-top: -8%;
    width:50%;
   height: auto;
   margin-left: -14%;
   padding-right: 5%;
   /*padding-left: 0%;*/
   margin-right: 0%;
}

#right img {
  align-items: right;
  background-size: cover;
  justify-content: right;
  float: right;
  width:50%;
  height: auto;
  margin-right: -13%;
 padding-left: 5%;
 margin-top: -30%;
 margin-left: -14%;
 padding-right: -8%;

}

#middle img {
  align-items: center;
  background-size: cover;
  justify-content: center;
  float: center;
  padding-top: -8%;
  width:50%;
 height: auto;
 padding-right: 5%;
 margin-left: -10%;

}

/*.hero_tall {
  padding-top: 12vh;
  padding-bottom: 12vh;
  overflow-x: hidden;
  overflow-y: hidden;
}*/

/*.hero {
  display: flex;
  color: white;
  flex-direction: column;

}*/

/*.home .hero {
    text-align: center;
}*/

.centeredblock {
    text-align: center;
    padding-top: 3%;
    padding-bottom: 1%;
    background-color: #eeb111;
    margin-top: -2%;
}

/*top navbar */
.navbar {
  border-bottom: 1px solid #323e48;
  border-left: 1px solid #323e48;
  color:#323e48;
  background-color: #323e48;
  background-image: none;
  background-repeat: no-repeat;
  padding: 0;
  margin: 0;
  border-radius: 0;
 }
 /*side admin menu bar*/
.sideMenu{
  color: white;
  background-color: #323e48;
  height: 87vh;
}
.sideButtonContainer{
  position: relative;
  top: 40%;
  transform: translateY(-60%);
}

.sideButtonContainer2{
  position: relative;
  margin-top: 10px;
  margin-bottom: 10px;
}

#not{
  overflow: scroll;
}

.zach{
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}
.col{
  width: 30%;
}
/*remove the rounded corners for the acordion buttons*/
.acordionButton{
  border-radius: 0;
}
.picLogo {
  /*height: auto;
  width: 22%;*/
  padding: 2%;
}
/*modal styles and animation*/
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content */
.modal-content {
    position: relative;
    background-color: #fefefe;
    margin: auto;
    padding: 0;
    border: 1px solid #888;
    width: 80%;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
    -webkit-animation-name: animatetop;
    -webkit-animation-duration: 0.4s;
    animation-name: animatetop;
    animation-duration: 0.4s
}

/* Add Animation */
@-webkit-keyframes animatetop {
    from {top:-300px; opacity:0}
    to {top:0; opacity:1}
}

@keyframes animatetop {
    from {top:-300px; opacity:0}
    to {top:0; opacity:1}
}

/* The Close Button */
.close {
    color: white;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

.modal-header {
    padding: 2px 16px;
    background-color: #323e48;
    color: white;
}

.modal-body {padding: 2px 16px;}

.modal-footer {
    padding: 2px 16px;
    background-color: #323e48;
    color: white;
}

.glyphicon {
  color: white;
  font-size: 125%;

}

.glyphicon:hover {
  color: #eeb111;
}

.icon {
  font-family: helvetica;
}

/* photoUploader.html */
.preview-block {
  height: 200px;
  width: 100%;
  overflow: hidden;
  position: relative;
  border: 1px solid black;
}

.preview {
  padding-top: 0;
  max-width: 100%;
  max-height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* Temporary styling for gallery and photoUploader pages*/
.addPhoto, .addPhoto:active, .addPhoto:visited {
  background-color: lightslategray;
  color: white;
  font-size: 70px;
  text-align: center;
  height: 150px;
  width: 150px;
  padding-top: 38px;
  cursor: pointer;
}
.addPhoto:hover {
  text-decoration: none;
  background-color: #bbb;
  color: gray;
}
.addContainer {
  text-align: center;
}
.upload {
  text-align: center;
}
#file-input {
	width: 0.1px;
	height: 0.1px;
	opacity: 0;
	overflow: hidden;
	position: absolute;
	z-index: -1;
}
.#file-input + label {
  font-size: 1.25em;
  font-weight: 700;
  color: white;
  background-color: black;
  display: inline-block;
}
.file-upload {
  text-align: center;
}
#file-input:focus, #file-label,
#file-input {
  background: linear-gradient(#444, white);
  color: #263238;
  padding: 7px;
  font-weight: normal;
}
#file-label:hover {
  background: linear-gradient(darkslategray, lightslategray);
  color: white;
}
#file-input, #file-label {
  cursor: pointer;
  border-width: 2px;
  border-style: outset;
  border-color: buttonface;
}
.gallery-display {
  height: 200px;
  margin: 0 auto;
  text-align: center;
}
.gallery-item {
  margin: 0 auto;
  height: 170px;
}
.success {
  margin-top: 60px;
  font-size: 50px;
}
.overflow {
  overflow: scroll;
  height: 87vh;
  width: 29%;
}

